--- a/Gep13.WindowsMobile.VbfViewer.Core/Gep13.WindowsMobile.VbfViewer.Core.csproj
+++ b/Gep13.WindowsMobile.VbfViewer.Core/Gep13.WindowsMobile.VbfViewer.Core.csproj
@@ -56,7 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Containers\Account.cs" />
+    <Compile Include="IoC.cs" />
+    <Compile Include="IoCRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\IIsolatedStorage.cs" />
+    <Compile Include="Storage\IsolatedStorage.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
