--- a/Gep13.WindowsMobile.VbfViewer.Core/Gep13.WindowsMobile.VbfViewer.Core.csproj
+++ b/Gep13.WindowsMobile.VbfViewer.Core/Gep13.WindowsMobile.VbfViewer.Core.csproj
@@ -47,6 +47,8 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Phone" />
+    <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -58,6 +60,8 @@
     <Compile Include="Containers\Account.cs" />
     <Compile Include="IoC.cs" />
     <Compile Include="IoCRegistration.cs" />
+    <Compile Include="Progress\IProgressService.cs" />
+    <Compile Include="Progress\ProgressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\IIsolatedStorage.cs" />
     <Compile Include="Storage\IsolatedStorage.cs" />
