- Added Settings Page - Trying to get BackStack implemented correctly, still needs work

--- a/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
@@ -101,6 +101,7 @@
     <Compile Include="ViewModels\InitialViewModel.cs" />
     <Compile Include="ViewModels\ProfileViewModel.cs" />
     <Compile Include="ViewModels\ScreenPageViewModelBase.cs" />
+    <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\WelcomeViewModel.cs" />
     <Compile Include="Views\AppControlViewBase.cs" />
     <Compile Include="Views\AppPageViewBase.cs" />
@@ -164,6 +165,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ProfileView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
