Added some template pages for the About Page page, including the License, Credits and History.  Updated the Style for the About Page to include the Status Bar.   Included the necessary styles to make the about pages work.

--- a/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
@@ -144,7 +144,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\AboutPageCreditsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AboutPageHistoryView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AboutPageLicenseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AddAccountView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\HelpView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
