--- a/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Gep13.WindowsMobile.VbfViewer.Client.csproj
@@ -184,9 +184,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gep13.WindowsMobile.VbfViewer.Core\Gep13.WindowsMobile.VbfViewer.Core.csproj">
+    <ProjectReference Include="..\Gep13.WindowsMobile.VbfViewer.Core\Gep13.WindowsPhone.VBForumsMetro.Core.csproj">
       <Project>{E9780E55-E34C-49B7-8A01-B5E9D7E148B1}</Project>
-      <Name>Gep13.WindowsMobile.VbfViewer.Core</Name>
+      <Name>Gep13.WindowsPhone.VBForumsMetro.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Gep13.WindowsPhone.Core\Gep13.WindowsPhone.Core.csproj">
       <Project>{35D496EF-840B-4EA7-8250-E09A8CF9209C}</Project>
