--- a/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
+++ b/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Progress\IProgressService.cs" />
     <Compile Include="Progress\ProgressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\AppControlViewBase.cs" />
+    <Compile Include="Views\AppPageViewBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
