--- a/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
+++ b/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Progress\IProgressService.cs" />
     <Compile Include="Progress\ProgressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\IStorageService.cs" />
+    <Compile Include="Storage\StorageService.cs" />
     <Compile Include="ViewModels\ScreenPageViewModelBase.cs" />
     <Compile Include="Views\AppControlViewBase.cs" />
     <Compile Include="Views\AppPageViewBase.cs" />
