Added a new Caliburn.Micro service called NavigationHelperService which at the minute includes a single method for clearing the backstack of a selected starting point.

--- a/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
+++ b/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
@@ -65,6 +65,8 @@
     <Reference Include="mscorlib.extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Navigation\INavigationHelperService.cs" />
+    <Compile Include="Navigation\NavigationHelperService.cs" />
     <Compile Include="Progress\IProgressService.cs" />
     <Compile Include="Progress\ProgressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
