--- a/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.3.1" />
+  <package id="SilverlightToolkitWP" version="4.2011.12.14" />
   <package id="YLAD" version="2.0.0" />
 </packages>
